Fix header and align mission img and statement.

--- a/resources/style.css
+++ b/resources/style.css
@@ -15,19 +15,18 @@ html {
   width: 100%;
   background-color: black;
   border-bottom: 1px solid seashell;
-  height: 69px;
-  top: 0px;
+  height: 59px;
   align-items: center;
   z-index: 1;
+  top: 0px;
+  padding: 10px 10px;
 }
 
 .logo img {
   display: flex;
   height: 50px;
-  padding: 10px 10px;
   align-items: center;
   justify-content: flex-start;
-  margin: 0;
 }
 
 .nav {
@@ -35,41 +34,37 @@ html {
   font-size: 22px;
   display: inline-flex;
   margin-left: auto;
-  padding-right: 10px;
 }
 
 .header a {
-  padding: 10px 10px;
   color: seashell;
   text-decoration: underline;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-content: flex-end;
-  text-align: right;
+  padding: 10px 10px;
 }
 
 .content-container {
   padding-top: 70px;
 }
 
-#mission {
+.mission-container {
   background-image: url("../resources/images/img-mission-background.jpg");
   height: 700px;
   width: 1200px;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0px auto;
 }
 
-.mission-container {
-  display: flex;
-  width: 1200px;
-}
-
-.mission-statement {
+.mission {
   display: block;
+  align-items: center;
   background-color: black;
   width: 100%;
+  margin: 0;
 }
 
 .tea {
